Eliminacion de google-services.json

--- a/clase7/.gitignore
+++ b/clase7/.gitignore
@@ -1,15 +1,23 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+# Archivos de la IDE y del sistema
+.idea/
+.gradle/
 .DS_Store
+
+# Archivos de build y de salida
 /build
 /captures
-.externalNativeBuild
-.cxx
+.cxx/
+*.apk
+*.aab
+*.aar
+*.iml
+
+# Clases y archivos de caché
+.cxx/
+.externalNativeBuild/
+*/gradle-wrapper.jar
+
+# Configuración local y privada
 local.properties
+google-services.json
+secrets.properties
